Fix smtlib installers